--- a/data/projects.json
+++ b/data/projects.json
@@ -1,26 +1,26 @@
 [
   {
-    "name": "Cricket Score Predictor",
-    "technologies": "Python",
-    "description": "Designed to predict the Score of T20 Cricket Matches using ML",
-    "githubRepo": "https://github.com/priyanshusrivastav212/Projects_ML/tree/main/Cricket%20Score%20Predictor",
-    "iconColor": "#3572A5",
-    "borderColor": "#5a93d1"
+    "name": "Enhanced Research Paper Analysis System",
+    "technologies": "Python, PyTorch, LangChain, FAISS, Streamlit",
+    "description": "Designed a RAG-based system to analyze research papers and enable contextual Q&A using Llama Chat HF 7B and LangChain.",
+    "githubRepo": "https://github.com/priyanshusrivastav212",
+    "iconColor": "#8e44ad",
+    "borderColor": "#a569bd"
   },
   {
-    "name": "Handwritten Prediction",
-    "technologies": "Python",
-    "description": "Developed and implemented a state‑of‑the‑art deep learning model for handwritten digits recognition.",
-    "githubRepo": "https://github.com/priyanshusrivastav212/Projects_ML/tree/main/Handwritten%20Prediction",
-    "iconColor": "#3572A5",
-    "borderColor": "#60c498"
+    "name": "Automated Diagnosis for Skin Diseases",
+    "technologies": "Python, PyTorch, TensorFlow, OpenCV, Hugging Face",
+    "description": "Built an AI pipeline to diagnose skin diseases and generate diagnostic reports using ViT and multimodal models like PaliGemma.",
+    "githubRepo": "https://github.com/priyanshusrivastav212",
+    "iconColor": "#e67e22",
+    "borderColor": "#f5b041"
   },
   {
-    "name": "Vehicle Speed Detection",
-    "technologies": "Python",
-    "description": "Using computer vision, analyzing cars inflow, and outflow giving them individual id and tracking their speed in real‑time",
-    "githubRepo": "Tracking highway car speeds in real time",
-    "iconColor": "#3572A5",
-    "borderColor": "#777777"
+    "name": "Blinkit Groceries Real-Time Data Analysis",
+    "technologies": "Power BI, DAX, Power Query",
+    "description": "Developed interactive dashboard analyzing Blinkit's grocery data including sales trends, item counts, and ratings.",
+    "githubRepo": "https://github.com/priyanshusrivastav212",
+    "iconColor": "#2ecc71",
+    "borderColor": "#58d68d"
   }
 ]
